@@ -1,3 +1,8 @@
+2010-03-01  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test.c (testPDF): extend the test run if a sample fails on the
+	first pass.
+
 2010-02-24  Brian Gough  <bjg@network-theory.co.uk>
 
 	* fdist.c (gsl_ran_fdist_pdf): compute log of pdf to avoid
